# Backpropagation

./: .gitignore  LICENSE  pyproject.toml  test_local.py
src/modular_nn_lib/: __init__.py  activations.py  layers.py  losses.py  network.py  optimizers.py
